# rustc_plugin

./: Cargo.toml  LICENSE  README.md  build.rs  help.html  release.sh  rust-toolchain.toml  search-index.js
camino/: enum.Utf8Component.html  enum.Utf8Prefix.html  index.html  struct.FromPathBufError.html  struct.FromPathError.html  struct.Utf8Components.html  struct.Utf8PathBuf.html  struct.Utf8PrefixComponent.html
cargo_metadata/: struct.VersionReq.html
crates/rustc-utils/: Cargo.toml
crates/rustc-utils/src/: cache.rs  lib.rs  test_utils.rs  timer.rs
crates/rustc-utils/src/hir/: mod.rs  region.rs  ty.rs
crates/rustc-utils/src/mir/: adt_def.rs  body.rs  control_dependencies.rs  graphviz.rs  mod.rs  mutability.rs  operand.rs  place.rs  places_conflict.rs
crates/rustc-utils/src/source_map/: filename.rs  find_bodies.rs  mod.rs  range.rs  span.rs
crates/rustc-utils/src/source_map/spanner/: hir_span.rs  location_or_arg.rs  mir_span.rs  mod.rs
crates/rustc_plugin/: Cargo.toml
crates/rustc_plugin/examples/print-all-items/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
crates/rustc_plugin/examples/print-all-items/src/: lib.rs
crates/rustc_plugin/examples/print-all-items/test-crate/: Cargo.toml
crates/rustc_plugin/src/: build.rs  cli.rs  driver.rs  lib.rs  plugin.rs
crates/rustc_plugin/tests/: test_example.rs
crates/rustc_plugin/tests/workspaces/basic/: Cargo.toml
crates/rustc_plugin/tests/workspaces/basic/src/: lib.rs
crates/rustc_plugin/tests/workspaces/multi/: Cargo.toml
crates/rustc_plugin/tests/workspaces/multi/a/: Cargo.toml
crates/rustc_plugin/tests/workspaces/multi/b/: Cargo.toml
crates/rustc_utils/: Cargo.toml
crates/rustc_utils/src/: cache.rs  lib.rs  test_utils.rs
crates/rustc_utils/src/errors/: mod.rs  silent_emitter.rs
crates/rustc_utils/src/hir/: mod.rs  ty.rs
crates/rustc_utils/src/mir/: adt_def.rs  body.rs  borrowck_facts.rs  control_dependencies.rs  graphviz.rs  location_or_arg.rs  mod.rs  mutability.rs  operand.rs  place.rs  places_conflict.rs
crates/rustc_utils/src/source_map/: filename.rs  find_bodies.rs  mod.rs  range.rs  span.rs
crates/rustc_utils/src/source_map/spanner/: hir_span.rs  mir_span.rs  mod.rs  span_tree.rs
log/: all.html  enum.Level.html  enum.LevelFilter.html  fn.set_logger_racy.html  index.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
nightly-2022-12-07-v0.0.1/: crates.js  settings.html  source-files.js
nightly-2023-04-12-v0.1.0/: help.html  search-index.js  settings.html  source-files.js
nightly-2023-04-12-v0.1.1/: search-index.js
nightly-2023-04-12-v0.1.2/: help.html  search-index.js  settings.html  source-files.js
nightly-2023-04-12-v0.1.3/: search-index.js
nightly-2023-04-12-v0.1.4/: search-index.js  source-files.js
proc_macro2/: struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.TokenStream.html
quote/: index.html
rustc_plugin/: all.html  fn.cli_main.html  sidebar-items.js  trait.RustcPlugin.html
scripts/: release.sh
semver/: struct.Comparator.html  struct.Error.html  struct.Version.html
serde/: derive.Deserialize.html  derive.Serialize.html  trait.Deserialize.html
serde_json/: enum.Value.html  fn.to_vec.html  index.html  struct.Number.html
src/: cli.rs  driver.rs  lib.rs  plugin.rs
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Fields.html  enum.GenericArgument.html  enum.Type.html  enum.TypeParamBound.html  fn.parse2.html  fn.parse_str.html  macro.braced.html  macro.parenthesized.html  macro.parse_quote.html  macro.parse_quote_spanned.html  struct.AngleBracketedGenericArguments.html  struct.AssocConst.html  struct.AssocType.html  struct.ConstParam.html  struct.DataStruct.html  struct.DeriveInput.html  struct.Error.html  struct.ExprAssign.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprInfer.html  struct.ExprLit.html  struct.ExprMatch.html  struct.ExprMethodCall.html  struct.ExprParen.html  struct.ExprRange.html  struct.ExprReference.html  struct.ExprStruct.html  struct.ExprTryBlock.html  struct.ExprUnsafe.html  struct.ExprWhile.html  struct.ExprYield.html  struct.Field.html  struct.FieldsNamed.html  (+23 more)
tests/: test_example.rs
unicode_ident/: fn.is_xid_continue.html  index.html
v0.10.0-nightly-2024-05-20/: crates.js  help.html  search-index.js  settings.html  src-files.js
v0.11.0-nightly-2024-12-01/: help.html  search-index.js  settings.html  src-files.js
v0.12.0-nightly-2024-12-01/: crates.js  help.html  search-index.js
v0.12.0-nightly-2024-12-15/: settings.html
v0.13.0-nightly-2025-03-03/: crates.js  help.html  search-index.js  settings.html  src-files.js
v0.14.0-nightly-2025-08-20/: src-files.js
v0.14.1-nightly-2025-08-20/: crates.js  help.html  settings.html  src-files.js
v0.14.2-nightly-2025-08-20/: src-files.js
v0.14.3-nightly-2025-08-20/: crates.js  src-files.js
v0.15.0-nightly-2026-05-01/: crates.js  help.html  src-files.js
v0.15.2-nightly-2026-05-01/: settings.html
v0.6.0-nightly-2023-04-12/: search-index.js  source-files.js
v0.6.1-nightly-2023-04-12/: search-index.js
v0.6.2/: crates.js  help.html  search-index.js  settings.html  source-files.js
v0.6.3/: crates.js  search-index.js  source-files.js
v0.7.0-nightly-2023-08-25/: crates.js  help.html  search-index.js  settings.html  src-files.js
v0.7.1-nightly-2023-08-25/: search-index.js  src-files.js
v0.7.2-nightly-2023-08-25/: search-index.js  src-files.js
v0.7.3-nightly-2023-08-25/: search-index.js  src-files.js
v0.7.4-nightly-2023-08-25/: crates.js  search-index.js
v0.8.0-nightly-2024-01-06/: help.html  search-index.js  settings.html  src-files.js
(+38388 files in other folders)
