[workspace]
members = ["crates/*"]

# TODO: glob doesn't seem to work for exclude?
exclude = [
  "crates/rustc_plugin/examples/print-all-items", 
  "crates/rustc_plugin/tests/workspaces"
]

resolver = "2"

[workspace.package]
version = "0.15.0-nightly-2026-05-01"
edition = "2024"
authors = ["Will Crichton <crichton.will@gmail.com>"]
repository = "https://github.com/cognitive-engineering-lab/rustc_plugin"
license = "MIT"