[package]
name = "rustc_plugin"
version = "0.7.3-nightly-2023-08-25"
edition = "2021"
authors = ["Will Crichton <crichton.will@gmail.com>"]
description = "A framework for writing plugins that integrate with the Rust compiler"
repository = "https://github.com/cognitive-engineering-lab/rustc_plugin"
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_tools_util = "0.1"
log = "0.4"
cargo_metadata = "0.14"
serde = "1"
serde_json = "1"

[dev-dependencies]
anyhow = {version = "1", features = ["backtrace"]}

[build-dependencies]
toml = "0.7"