[package]
name = "rustc_utils"
version = "0.7.3-nightly-2023-08-25"
edition = "2021"
authors = ["Will Crichton <crichton.will@gmail.com>"]
description = "Utilities for working with the Rust compiler"
repository = "https://github.com/cognitive-engineering-lab/rustc_plugin"
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
serde = ["dep:serde"]
test = ["dep:textwrap"]
graphviz = ["dep:regex"]
ts-rs = ["dep:ts-rs"]
indexical = ["dep:indexical"]
default = []

[dependencies]
anyhow = "1"
log = "0.4"
intervaltree = "0.2"
cfg-if = "1"
serde = {version = "1", features = ["derive"], optional = true}
textwrap = {version = "0.16", optional = true}
regex = {version = "1", optional = true}
ts-rs = {version = "6", optional = true}
indexical = {version = "0.3.1", default-features = false, features = ["rustc"], optional = true}

[dev-dependencies]
rustc_utils = {path = ".", features = ["test"]}
test-log = "0.2"
env_logger = {version = "0.9", default-features = false}