[package]
name = "rustc_utils"
description = "Utilities for working with the Rust compiler"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true

[features]
serde = ["dep:serde"]
test = ["dep:textwrap"]
ts-rs = ["dep:ts-rs"]
indexical = ["dep:indexical"]
default = []

[dependencies]
anyhow = "1"
log = { workspace = true }
intervaltree = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
textwrap = { version = "0.16", optional = true }
ts-rs = { version = "7", optional = true }
indexical = { version = "0.10.4", default-features = false, features = ["rustc"], optional = true }

[dev-dependencies]
rustc_utils = { path = ".", features = ["test"] }
test-log = "0.2"
env_logger = { version = "0.9", default-features = false }
