[package]
name = "print-all-items"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = { path = "../.." }
env_logger = "0.10"
# Note: have to bump rustc_plugin nightly for clap>4.4 compatibility
clap = {version = "=4.3.23", features = ["derive"]}
serde = {version = "1", features = ["derive"]}