[package]
name = "print-all-items"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = { path = "../.." }
env_logger = { version = "0.10", default-features = false }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
rustc_plugin = { path = "../.." }